--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
 
 
 <body>
-    <h1>XXXXXXXX</h1>
-    <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+    <h1>Auto Send SMS</h1>
+    <p>This application will allow auto trigger SMS</p>
 </body>
 
 </html>
